{
  "@@locale": "es",
  "loginButton": "Iniciar sesión",
  "noAccountText": "¿No tienes cuenta? Regístrate aquí",
  "loginTitle": "Inicia sesión para continuar",
  "accessDirect": "Acceso directo",
  "accessEmail": "Acceso con email",
  "forgotPassword": "¿Has olvidado tu contraseña?",
  "fillAllFields": "Por favor, complete todos los campos",
  "googleSignInButton": "Inicia sesión con Google",
  "googleSignInSuccess": "Inicio de sesión exitoso",
  "emailInfoTooltip": "El correo debe contener @ y un dominio, por ejemplo: usuario@ejemplo.com",
  "emailLabel": "Correo electrónico",
  "emailEmptyError": "Por favor, ingresa un correo electrónico",
  "emailInvalidError": "Correo no válido",
  "passwordLabel": "Contraseña",
  "passwordInfoTooltip": "La contraseña debe tener mínimo 6 caracteres",

  "registerTitle": "Registro",
  "quickAccess": "Acceso   directo",
  "registerHere": "Registrate aquí",
  "alreadyRegistered": "¿Ya estas registrado? Inicia sesión",

  "stepRegister": "Registro",
  "stepChoosePlan": "Elegir Plan",
  "choosePlan": "Elegir Plan",
  "accept": "Aceptar",
  "cancel": "Cancelar",

  "successfulRegister": "Registro exitoso",
  "reviewFields": "Revisa los campos para poder continuar",

  "premiumPlan": "Plan Premiun",
  "bookReading": "Lectura de libros",
  "accessToCatalog": "Acceso a un amplio catálogo de libros",
  "achievementSystem": "Sistema de logros",
  "earnBadges": "Gana insignias por tus avances y destaca en la comunidad",
  "freePlan": "Plan gratuito",
  "freePlanBenefits": "Beneficios del plan gratuito",

  "month": "Mes",
  "semiAnnual": "SEM",
  "year": "Año",

  "socialEnvironment": "Entorno social",
  "followAndShare": "Sigue a otros usuarios y comparte tus opiniones",
  "personalLibrary": "Biblioteca personal",
  "organizeBooks": "Organiza tus libros en un solo lugar",
  "userFieldHint": "Debe contener entre 3 y 25 caracteres",
  "userFieldLabel": "Nombre de usuario",
  "recoverTitle": "Recuperación de contraseña",
  "sendButton": "Enviar",
  "emailSentSuccess": "Correo electrónico enviado",
  "goBack": "Volver atrás",

  "topRatedTitle": "Top 3 libros mejores valorados",
  "recentTitle": "Recientes",
  "loadingUsername": "Cargando...",

  "searchHint": "Busca por título...",
  "filterLabel": "Filtro",
  "genreAll": "Todos",
  "recommendations": "Recomendaciones",
  "matches": "Coincidencias",
  "noResults": "No se encontraron resultados.",

  "readBook": "Leer libro",
  "author": "Autor: {name}",
  "publisher": "Editorial: {name}",
  "reviews": "Reseñas",
  "noReviews": "No hay reseñas aún.",
  "noRating": "Sin calificación",
  "addToList": "Añadir a una lista",

  "createList": "Crear lista",
  "enterName": "Introduce un nombre",
  "listNameHint": "Nombre de la lista",
  "yourLists": "Tus listas",
  "noLists": "No hay listas",
  "create": "Crear",

  "reviewTitle": "Reseña",
  "writeReviewHint": "Escriba una reseña",
  "sendReview": "Enviar reseña",
  "editReview": "Editar reseña",

  "deleteReviewTitle": "Eliminar reseña",
  "deleteReviewConfirmation": "¿Está seguro de eliminar esta reseña?",
  "yes": "Sí",

  "myLists": "Mis listas",
  "filter": "Filtro",
  "searchListsHint": "Busca por lista...",
  "noListsFound": "No se encontraron listas.",
  "createListPrompt": "Pon un nombre a tu nueva lista",
  "listNameExists": "El nombre de la lista ya existe",

  "edit": "Editar",
  "delete": "Eliminar",
  "deleteListTitle": "Eliminar Lista",
  "deleteListConfirmation": "¿Está seguro de eliminar esta lista?",
  "no": "No",
  "editList": "Editar lista",
  "editNameList": "Nombre de la lista",
  "done": "Listo",
  "searchByTitleHint": "Busca por título...",
  "back": "Atrás",
  "addToListName": "Añadir a {listName}",
  "home": "Inicio",
  "my_lists": "Mis listas",
  "profile": "Perfil",

  "edit_profile": "Editar Perfil",
  "username": "Nombre de usuario",
  "email": "Correo electrónico",

  "edit_subscription": "Editar Suscripción",
  "subscription_free": "Gratis",
  "subscription_monthly": "Mensual",
  "subscription_semi_annual": "Semestral",
  "subscription_yearly": "Anual",

  "followers_list": "Lista de seguidores",
  "follows_list": "Lista de seguidos",
  "search_placeholder": "Busca por usuario...",
  "unfollow": "Dejar de seguir",
  "follow": "Seguir",
  "no_matches": "No hay coincidencias"
}
