{
  "@@locale": "en",
  "loginButton": "Login",
  "noAccountText": "Don't have an account? Register here"
}
